--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Flappy Bird</title>
   </head>
   <body>
     <canvas id="canvas" width="288" height="512"></canvas>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
